IaC/xpipe-dorjecurreli/lab-v1-env-xdev/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: lab-v1-env-xdev
  name: lab-v1-env-xdev
  namespace: xpipe-dorjecurreli
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: lab-v1-env-xdev
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: lab-v1-env-xdev
    spec:
      nodeSelector:
        kubernetes.io/hostname: "wopr-lab-ph-lnx-wrk-2.sindria.corp"
      imagePullSecrets:
        - name: sindria-dockerhub
      containers:
        - env:
            - name: HOST_USER_UID
              valueFrom:
                configMapKeyRef:
                  key: HOST_USER_UID
                  name: lab-v1-env-xdev-config
            - name: HOST_DOCKER_GROUP_UID
              valueFrom:
                configMapKeyRef:
                  key: HOST_DOCKER_GROUP_UID
                  name: lab-v1-env-xdev-config
            - name: TZ
              valueFrom:
                configMapKeyRef:
                  key: TZ
                  name: lab-v1-env-xdev-config
            - name: XDEV_SINDRIA_USER_PASSWORD
              valueFrom:
                secretKeyRef:
                  key: XDEV_SINDRIA_USER_PASSWORD
                  name: lab-v1-env-xdev-secret
            - name: DISPLAY
              valueFrom:
                configMapKeyRef:
                  key: DISPLAY
                  name: lab-v1-env-xdev-config
            - name: XDEV_MODE
              valueFrom:
                configMapKeyRef:
                  key: XDEV_MODE
                  name: lab-v1-env-xdev-config
            - name: XDEV_WEB_PORT
              valueFrom:
                configMapKeyRef:
                  key: XDEV_WEB_PORT
                  name: lab-v1-env-xdev-config
            - name: XDEV_VNC_HOST
              valueFrom:
                configMapKeyRef:
                  key: XDEV_VNC_HOST
                  name: lab-v1-env-xdev-config
            - name: XDEV_VNC_PORT
              valueFrom:
                configMapKeyRef:
                  key: XDEV_VNC_PORT
                  name: lab-v1-env-xdev-config
            - name: GIT_USERNAME
              valueFrom:
                configMapKeyRef:
                  key: GIT_USERNAME
                  name: lab-v1-env-xdev-config
            - name: GIT_EMAIL
              valueFrom:
                configMapKeyRef:
                  key: GIT_EMAIL
                  name: lab-v1-env-xdev-config
            - name: GIT_EDITOR
              valueFrom:
                configMapKeyRef:
                  key: GIT_EDITOR
                  name: lab-v1-env-xdev-config
            - name: GIT_SINDRIA_PATH
              valueFrom:
                configMapKeyRef:
                  key: GIT_SINDRIA_PATH
                  name: lab-v1-env-xdev-config
            - name: GIT_SINDRIA_TOKEN
              valueFrom:
                secretKeyRef:
                  key: GIT_SINDRIA_TOKEN
                  name: lab-v1-env-xdev-secret
            - name: GIT_SINDRIA_URL
              valueFrom:
                configMapKeyRef:
                  key: GIT_SINDRIA_URL
                  name: lab-v1-env-xdev-config
          image: sindriainc/xdev:6.0.0-wrapper
          imagePullPolicy: Always
          securityContext:
            capabilities:
              add:
                - NET_ADMIN
          #livenessProbe:
          #  failureThreshold: 3
          #  httpGet:
          #    path: /afc/channelactivity/actuator/health
          #    port: 8080
          #    scheme: HTTP
          #  initialDelaySeconds: 50
          #  periodSeconds: 10
          #  successThreshold: 1
          #  timeoutSeconds: 1
          name: lab-v1-env-xdev
          ports:
            - containerPort: 8080
              protocol: TCP
            - containerPort: 5901
              protocol: TCP
            - containerPort: 2222
              hostPort: 2222
              protocol: TCP
          #readinessProbe:
          #  failureThreshold: 3
          #  httpGet:
          #    path: /afc/channelactivity/actuator/health
          #    port: 8080
          #    scheme: HTTP
          #  initialDelaySeconds: 20
          #  periodSeconds: 10
          #  successThreshold: 1
          #  timeoutSeconds: 1
          resources:
            limits:
              memory: 16384Mi
            requests:
              memory: 16384Mi
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          volumeMounts:
            - mountPath: /home/sindria/.cache/JetBrains
              name: lab-v1-env-xdev-jetbrains-volume
            - mountPath: /home/sindria/XPipe
              name: lab-v1-env-xdev-xpipe-volume
            #- mountPath: /home/sindria/Projects
            #  name: lab-v1-env-xdev-projects-volume
            - mountPath: /home/sindria/.ssh
              name: lab-v1-env-xdev-ssh-volume
            - mountPath: /home/sindria/.aws
              name: lab-v1-env-xdev-aws-volume
            - mountPath: /home/sindria/.azure
              name: lab-v1-env-xdev-azure-volume
            - mountPath: /home/sindria/.kube
              name: lab-v1-env-xdev-kube-volume
            - mountPath: /home/sindria/.docker
              name: lab-v1-env-xdev-docker-volume
            - mountPath: /home/sindria/.openvpn
              name: lab-v1-env-xdev-openvpn-volume
            
            # XPipe V1 Web Portal
            - mountPath: /home/sindria/XPipe/Products/XPipe/V1/xpipe-v1-web-portal/src/pub/static
              name: xpipe-v1-web-portal-static-volume
              readOnly: true
            - mountPath: /home/sindria/XPipe/Products/XPipe/V1/xpipe-v1-web-portal/src/pub/media
              name: xpipe-v1-web-portal-media-volume
              readOnly: true
            - mountPath: /home/sindria/XPipe/Products/XPipe/V1/xpipe-v1-web-portal/src/generated
              name: xpipe-v1-web-portal-generated-volume
              readOnly: true
            - mountPath: /home/sindria/XPipe/Products/XPipe/V1/xpipe-v1-web-portal/src/var
              name: xpipe-v1-web-portal-var-volume
              readOnly: true
            - mountPath: /home/sindria/XPipe/Products/XPipe/V1/xpipe-v1-web-portal/src/vendor
              name: xpipe-v1-web-portal-vendor-volume
              readOnly: true

            # Iam V1 Api Collector
            - mountPath: /home/sindria/XPipe/Iam/V1/Collector/iam-v1-api-collector/src/pub/static
              name: iam-v1-api-collector-static-volume
              readOnly: true
            - mountPath: /home/sindria/XPipe/Iam/V1/Collector/iam-v1-api-collector/src/pub/media
              name: iam-v1-api-collector-media-volume
              readOnly: true
            - mountPath: /home/sindria/XPipe/Iam/V1/Collector/iam-v1-api-collector/src/generated
              name: iam-v1-api-collector-generated-volume
              readOnly: true
            - mountPath: /home/sindria/XPipe/Iam/V1/Collector/iam-v1-api-collector/src/var
              name: iam-v1-api-collector-var-volume
              readOnly: true
            - mountPath: /home/sindria/XPipe/Iam/V1/Collector/iam-v1-api-collector/src/vendor
              name: iam-v1-api-collector-vendor-volume
              readOnly: true

            # Pipelines V1 Api Collector
            - mountPath: /home/sindria/XPipe/Pipelines/V1/Collector/pipeline-v1-api-collector/src/pub/static
              name: pipeline-v1-api-collector-static-volume
              readOnly: true
            - mountPath: /home/sindria/XPipe/Pipelines/V1/Collector/pipeline-v1-api-collector/src/pub/media
              name: pipeline-v1-api-collector-media-volume
              readOnly: true
            - mountPath: /home/sindria/XPipe/Pipelines/V1/Collector/pipeline-v1-api-collector/src/generated
              name: pipeline-v1-api-collector-generated-volume
              readOnly: true
            - mountPath: /home/sindria/XPipe/Pipelines/V1/Collector/pipeline-v1-api-collector/src/var
              name: pipeline-v1-api-collector-var-volume
              readOnly: true
            - mountPath: /home/sindria/XPipe/Pipelines/V1/Collector/pipeline-v1-api-collector/src/vendor
              name: pipeline-v1-api-collector-vendor-volume
              readOnly: true

            # Lab V1 Api Collector
            - mountPath: /home/sindria/XPipe/Lab/V1/Collector/lab-v1-api-collector/src/pub/static
              name: lab-v1-api-collector-static-volume
              readOnly: true
            - mountPath: /home/sindria/XPipe/Lab/V1/Collector/lab-v1-api-collector/src/pub/media
              name: lab-v1-api-collector-media-volume
              readOnly: true
            - mountPath: /home/sindria/XPipe/Lab/V1/Collector/lab-v1-api-collector/src/generated
              name: lab-v1-api-collector-generated-volume
              readOnly: true
            - mountPath: /home/sindria/XPipe/Lab/V1/Collector/lab-v1-api-collector/src/var
              name: lab-v1-api-collector-var-volume
              readOnly: true
            - mountPath: /home/sindria/XPipe/Lab/V1/Collector/lab-v1-api-collector/src/vendor
              name: lab-v1-api-collector-vendor-volume
              readOnly: true




      dnsPolicy: ClusterFirst
      #hostNetwork: true
      restartPolicy: Always
      schedulerName: default-scheduler
      terminationGracePeriodSeconds: 30
      volumes:
        - name: lab-v1-env-xdev-jetbrains-volume
          persistentVolumeClaim:
            claimName: lab-v1-env-xdev-jetbrains-pvc
            #defaultMode: 420
        - name: lab-v1-env-xdev-xpipe-volume
          persistentVolumeClaim:
            claimName: lab-v1-env-xdev-xpipe-pvc
            #defaultMode: 420
        #- name: lab-v1-env-xdev-projects-volume
        #  persistentVolumeClaim:
        #    claimName: lab-v1-env-xdev-projects-pvc
        #    #defaultMode: 420
        - name: lab-v1-env-xdev-ssh-volume
          persistentVolumeClaim:
            claimName: lab-v1-env-xdev-ssh-pvc
            #defaultMode: 420
        - name: lab-v1-env-xdev-aws-volume
          persistentVolumeClaim:
            claimName: lab-v1-env-xdev-aws-pvc
            #defaultMode: 420
        - name: lab-v1-env-xdev-azure-volume
          persistentVolumeClaim:
            claimName: lab-v1-env-xdev-azure-pvc
            #defaultMode: 420
        - name: lab-v1-env-xdev-kube-volume
          persistentVolumeClaim:
            claimName: lab-v1-env-xdev-kube-pvc
            #defaultMode: 420
        - name: lab-v1-env-xdev-docker-volume
          persistentVolumeClaim:
            claimName: lab-v1-env-xdev-docker-pvc
            #defaultMode: 420
        - name: lab-v1-env-xdev-openvpn-volume
          persistentVolumeClaim:
            claimName: lab-v1-env-xdev-openvpn-pvc
            #defaultMode: 420
        
        # XPipe V1 Web Portal
        - name: xpipe-v1-web-portal-static-volume
          persistentVolumeClaim:
            claimName: xpipe-v1-web-portal-static-pvc
            #defaultMode: 420
        - name: xpipe-v1-web-portal-media-volume
          persistentVolumeClaim:
            claimName: xpipe-v1-web-portal-media-pvc
            #defaultMode: 420
        - name: xpipe-v1-web-portal-generated-volume
          persistentVolumeClaim:
            claimName: xpipe-v1-web-portal-generated-pvc
            #defaultMode: 420
        - name: xpipe-v1-web-portal-var-volume
          persistentVolumeClaim:
            claimName: xpipe-v1-web-portal-var-pvc
            #defaultMode: 420
        - name: xpipe-v1-web-portal-vendor-volume
          persistentVolumeClaim:
            claimName: xpipe-v1-web-portal-vendor-pvc
            #defaultMode: 420
      #- name: xpipe-v1-web-portal-composerlock-volume
      #  persistentVolumeClaim:
      #    claimName: xpipe-v1-web-portal-composerlock-pvc
      #    #defaultMode: 420

        # Iam V1 Api Collector
        - name: iam-v1-api-collector-static-volume
          persistentVolumeClaim:
            claimName: iam-v1-api-collector-static-pvc
            #defaultMode: 420
        - name: iam-v1-api-collector-media-volume
          persistentVolumeClaim:
            claimName: iam-v1-api-collector-media-pvc
            #defaultMode: 420
        - name: iam-v1-api-collector-generated-volume
          persistentVolumeClaim:
            claimName: iam-v1-api-collector-generated-pvc
            #defaultMode: 420
        - name: iam-v1-api-collector-var-volume
          persistentVolumeClaim:
            claimName: iam-v1-api-collector-var-pvc
            #defaultMode: 420
        - name: iam-v1-api-collector-vendor-volume
          persistentVolumeClaim:
            claimName: iam-v1-api-collector-vendor-pvc
            #defaultMode: 420
      #- name: xpipe-v1-web-portal-composerlock-volume
      #  persistentVolumeClaim:
      #    claimName: xpipe-v1-web-portal-composerlock-pvc
      #    #defaultMode: 420

        # Pipelines V1 Api Collector
        - name: pipelines-v1-api-collector-static-volume
          persistentVolumeClaim:
            claimName: pipelines-v1-api-collector-static-pvc
            #defaultMode: 420
        - name: pipelines-v1-api-collector-media-volume
          persistentVolumeClaim:
            claimName: pipelines-v1-api-collector-media-pvc
            #defaultMode: 420
        - name: pipelines-v1-api-collector-generated-volume
          persistentVolumeClaim:
            claimName: pipelines-v1-api-collector-generated-pvc
            #defaultMode: 420
        - name: pipelines-v1-api-collector-var-volume
          persistentVolumeClaim:
            claimName: pipelines-v1-api-collector-var-pvc
            #defaultMode: 420
        - name: pipelines-v1-api-collector-vendor-volume
          persistentVolumeClaim:
            claimName: pipelines-v1-api-collector-vendor-pvc
            #defaultMode: 420
      #- name: xpipe-v1-web-portal-composerlock-volume
      #  persistentVolumeClaim:
      #    claimName: xpipe-v1-web-portal-composerlock-pvc
      #    #defaultMode: 420

        # Lab V1 Api Collector
        - name: lab-v1-api-collector-static-volume
          persistentVolumeClaim:
            claimName: lab-v1-api-collector-static-pvc
            #defaultMode: 420
        - name: lab-v1-api-collector-media-volume
          persistentVolumeClaim:
            claimName: lab-v1-api-collector-media-pvc
            #defaultMode: 420
        - name: lab-v1-api-collector-generated-volume
          persistentVolumeClaim:
            claimName: lab-v1-api-collector-generated-pvc
            #defaultMode: 420
        - name: lab-v1-api-collector-var-volume
          persistentVolumeClaim:
            claimName: lab-v1-api-collector-var-pvc
            #defaultMode: 420
        - name: lab-v1-api-collector-vendor-volume
          persistentVolumeClaim:
            claimName: lab-v1-api-collector-vendor-pvc
            #defaultMode: 420
      #- name: xpipe-v1-web-portal-composerlock-volume
      #  persistentVolumeClaim:
      #    claimName: xpipe-v1-web-portal-composerlock-pvc
      #    #defaultMode: 420
---
