IaC/xpipe-dorjecurreli/lab-v1-env-xdev/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: lab-v1-env-xdev
  name: lab-v1-env-xdev
  namespace: xpipe-dorjecurreli
spec:
  ports:
  - name: web
    port: 8080
    protocol: TCP
    targetPort: 8080
  - name: vnc
    port: 5901
    protocol: TCP
    targetPort: 5901
  - name: ssh
    port: 2222
    protocol: TCP
    targetPort: 2222
  selector:
    app: lab-v1-env-xdev
  sessionAffinity: None
  type: ClusterIP
